# sudoku

./: .gitignore  Cargo.toml  README.md  main.sh  sudoku.rs
R/: main.R
data/: output.csv  output1.csv
data/sampleoutput/: largeoutput.csv  output.csv  output2.csv
src/: main.rs  sudoku.rs  utils.rs
