[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
num = "0.4.1"
rand = "0.8.5"
itertools = "0.10.1"
prettytable-rs = "^0.10"
gnuplot = "0.0.39"
color-eyre = "0.6.2"


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
debug = true

[[bench]]
name = "my_benchmark"
harness = false

